#2057: Photos: Fix visibility of Audio Block

--- a/photos/blocks.css
+++ b/photos/blocks.css
@@ -314,6 +314,7 @@ p.has-drop-cap:not(:focus):first-letter {
 .wp-block-video video,
 .wp-block-audio audio {
 	height: auto;
+	min-height: 50px;
 	width: 100%;
 }
 
