--- a/photos/editor-blocks.css
+++ b/photos/editor-blocks.css
@@ -503,6 +503,7 @@ blockquote p:last-child {
 .wp-block-audio audio,
 .wp-block-video video {
 	height: auto;
+	min-height: 50px;
 	width: 100%;
 }
 
